added logging utils

--- a/csharp/Backend/Backend.csproj
+++ b/csharp/Backend/Backend.csproj
@@ -19,6 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="../ApiUtils/ApiUtils.csproj" />
       <ProjectReference Include="../Database\Database.csproj" />
     </ItemGroup>
 
