--- a/csharp/Backend/appsettings.json
+++ b/csharp/Backend/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EnvVars" : [
+    "GITHUB_CLIENT_ID", 
+    "GITHUB_CLIENT_SECRET", 
+    "MYSQL_DATABASE", 
+    "MYSQL_PORT", 
+    "MYSQL_HOST", 
+    "MYSQL_ROOT_PASSWORD"
+  ]
 }
