--- a/infrastructure/docker-compose.yaml
+++ b/infrastructure/docker-compose.yaml
@@ -24,8 +24,35 @@ services:
       - ${BACKEND_HTTP_PORT}
     ports:
       - "${BACKEND_HTTP_PORT}:${BACKEND_HTTP_PORT}"
+    volumes:
+      - /var/log/SimplifiedCrafter:/var/log
     depends_on:
       - mysql_database
 
+  loki:
+    image: grafana/loki:latest
+    container_name: loki
+    ports:
+      - "3100:3100"
+    volumes:
+      - ./logging/loki-config.yml:/etc/loki/local-config.yaml
+
+  promtail:
+    image: grafana/promtail:latest
+    container_name: promtail
+    volumes:
+      - /var/log/SimplifiedCrafter:/var/log
+      - ./logging/promtail-config.yml:/etc/promtail/config.yml
+    command: -config.file=/etc/promtail/config.yml
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana_data:/var/lib/grafana
+
 volumes:
   mysql_data:
+  grafana_data:
