--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,10 +14,23 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Find and build Dockerfiles
+      - name: Find and build Dockerfiles (handling csharp separately)
         run: |
           set -e  # Exit on error
-          find . -name 'Dockerfile' | while read dockerfile; do
+          
+          # Build Dockerfiles inside the csharp directory from csharp
+          if [ -d "csharp" ]; then
+            cd csharp
+            find . -name 'Dockerfile' | while read dockerfile; do
+              dir=$(dirname "$dockerfile")
+              echo "Building Dockerfile in $dir (executing from csharp/)"
+              docker build -t test-image "$dir"
+            done
+            cd ..
+          fi
+          
+          # Build Dockerfiles outside the csharp directory normally
+          find . -name 'Dockerfile' -not -path "./csharp/*" | while read dockerfile; do
             dir=$(dirname "$dockerfile")
             echo "Building Dockerfile in $dir"
             docker build -t test-image "$dir"
