--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,6 +19,20 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        
+      - name: Set up environment variables
+        run: |
+          echo "MYSQL_ROOT_PASSWORD=test" >> $GITHUB_ENV
+          echo "MYSQL_DATABASE=test" >> $GITHUB_ENV
+          echo "MYSQL_USER=test" >> $GITHUB_ENV
+          echo "MYSQL_PASSWORD=test" >> $GITHUB_ENV
+          echo "MYSQL_HOST=test" >> $GITHUB_ENV
+          echo "MYSQL_PORT=test" >> $GITHUB_ENV
+          echo "BACKEND_HTTP_PORT=test" >> $GITHUB_ENV
+          echo "GAME_ADMIN_NAME=test" >> $GITHUB_ENV
+          echo "GAME_ADMIN_EMAIL=test" >> $GITHUB_ENV
+          echo "GITHUB_CLIENT_ID=test" >> $GITHUB_ENV
+          echo "GITHUB_CLIENT_SECRET=test" >> $GITHUB_ENV
 
       - name: Build Docker Compose services
         working-directory: infrastructure
