--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,8 +27,8 @@ jobs:
           echo "MYSQL_USER=test" >> $GITHUB_ENV
           echo "MYSQL_PASSWORD=test" >> $GITHUB_ENV
           echo "MYSQL_HOST=test" >> $GITHUB_ENV
-          echo "MYSQL_PORT=test" >> $GITHUB_ENV
-          echo "BACKEND_HTTP_PORT=test" >> $GITHUB_ENV
+          echo "MYSQL_PORT=3100" >> $GITHUB_ENV
+          echo "BACKEND_HTTP_PORT=8080" >> $GITHUB_ENV
           echo "GAME_ADMIN_NAME=test" >> $GITHUB_ENV
           echo "GAME_ADMIN_EMAIL=test" >> $GITHUB_ENV
           echo "GITHUB_CLIENT_ID=test" >> $GITHUB_ENV
