--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,6 +34,7 @@ jobs:
           echo "GAME_ADMIN_EMAIL=test" >> infrastructure/.env
           echo "GITHUB_CLIENT_ID=test" >> infrastructure/.env
           echo "GITHUB_CLIENT_SECRET=test" >> infrastructure/.env
+          echo "GRAFANA_PORT=3000" >> infrastructure/.env
 
       - name: Build Docker Compose services
         working-directory: infrastructure
