--- a/csharp/Backend/appsettings.json
+++ b/csharp/Backend/appsettings.json
@@ -12,7 +12,9 @@
     "MYSQL_DATABASE", 
     "MYSQL_PORT", 
     "MYSQL_HOST", 
-    "MYSQL_ROOT_PASSWORD"
+    "MYSQL_ROOT_PASSWORD",
+    "JWT_ISSUER",
+    "JWT_SECRET"
   ],
   "Auth" : {
     "TokenExpirationDays" : 7
