--- a/csharp/ApiUtils/ApiUtils.csproj
+++ b/csharp/ApiUtils/ApiUtils.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../Database/Database.csproj" />
+  </ItemGroup>
+
 </Project>
