--- a/infrastructure/docker-compose/local/docker-compose.yaml
+++ b/infrastructure/docker-compose/local/docker-compose.yaml
@@ -1,43 +1,98 @@
 services:
-
-  auth-server:
+  auth:
     restart: always
     build:
       context: ./backend
       dockerfile: cmd/auth_server/Dockerfile
     ports:
-      - "4000:4000"
+      - "${AUTH_PORT}:${AUTH_PORT}"
+    environment:
+      - JWT_SECRET=${JWT_SECRET}
+      - GITHUB_CLIENT_ID=${GITHUB_CLIENT_ID}
+      - GITHUB_CLIENT_SECRET=${GITHUB_CLIENT_SECRET}
+      - GITHUB_REDIRECT_URI=${GITHUB_REDIRECT_URI}
+      - DOCKER_AUTH=${DOCKER_AUTH}
+      - DOCKER_HUB=${DOCKER_HUB}
+      - DOCKER_TOKEN=${DOCKER_TOKEN}
+      - SERVER_PORT=${AUTH_PORT}
+      - DB_USER=${POSTGRES_USER}
+      - DB_PASSWORD=${POSTGRES_PASSWORD}
+      - DB_NAME=auth
+      - DB_HOST=${POSTGRES_HOST}
+      - DB_PORT=${POSTGRES_PORT}
+      - USER_AGENT=hub
     depends_on:
       - postgres
       - redis
     networks:
       - app-network
 
-  game-server:
-    restart: always
-    build:
-      context: ./backend
-      dockerfile: cmd/game_server/Dockerfile
-    ports:
-      - "4001:4000"
-    depends_on:
-      - auth-server
-      - postgres
-      - redis
-    networks:
-      - app-network
-
-  game-hub:
+  hub:
     restart: always
     build:
       context: ./backend
       dockerfile: cmd/game_hub/Dockerfile
     ports:
-      - "4002:4000"
+      - "${HUB_PORT}:${HUB_PORT}"
+    environment:
+      - DOCKER_AUTH=${DOCKER_AUTH}
+      - DOCKER_HUB=${DOCKER_HUB}
+      - DOCKER_TOKEN=${DOCKER_TOKEN}
+      - SERVER_PORT=${HUB_PORT}
+      - DB_USER=${POSTGRES_USER}
+      - DB_PASSWORD=${POSTGRES_PASSWORD}
+      - DB_NAME=hub
+      - DB_HOST=${POSTGRES_HOST}
+      - DB_PORT=${POSTGRES_PORT}
+      - USER_AGENT=hub
     depends_on:
-      - auth-server
-      - postgres
-      - redis
+      - auth
+    networks:
+      - app-network
+
+  game-realm-1:
+    restart: always
+    build:
+      context: ./backend
+      dockerfile: cmd/game_server/Dockerfile
+    ports:
+      - "4001:${REALM_PORT}"
+    environment:
+      - DOCKER_AUTH=${DOCKER_AUTH}
+      - DOCKER_HUB=${DOCKER_HUB}
+      - DOCKER_TOKEN=${DOCKER_TOKEN}
+      - SERVER_PORT=${REALM_PORT}
+      - DB_USER=${POSTGRES_USER}
+      - DB_PASSWORD=${POSTGRES_PASSWORD}
+      - DB_NAME=realm1
+      - DB_HOST=${POSTGRES_HOST}
+      - DB_PORT=${POSTGRES_PORT}
+      - USER_AGENT=game-realm-1
+    depends_on:
+      - hub
+    networks:
+      - app-network
+
+  game-realm-2:
+    restart: always
+    build:
+      context: ./backend
+      dockerfile: cmd/game_server/Dockerfile
+    ports:
+      - "4002:${REALM_PORT}"
+    environment:
+      - DOCKER_AUTH=${DOCKER_AUTH}
+      - DOCKER_HUB=${DOCKER_HUB}
+      - DOCKER_TOKEN=${DOCKER_TOKEN}
+      - SERVER_PORT=${REALM_PORT}
+      - DB_USER=${POSTGRES_USER}
+      - DB_PASSWORD=${POSTGRES_PASSWORD}
+      - DB_NAME=realm2
+      - DB_HOST=${POSTGRES_HOST}
+      - DB_PORT=${POSTGRES_PORT}
+      - USER_AGENT=game-realm-2
+    depends_on:
+      - hub
     networks:
       - app-network
 
@@ -46,11 +101,11 @@ services:
     container_name: postgres-db
     restart: always
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: mydatabase
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: postgres
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
     volumes:
       - postgres-data:/var/lib/postgresql/data
     networks:
