--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,35 +22,36 @@ jobs:
         
       - name: Set up environment variables
         run: |
-          echo "MYSQL_ROOT_PASSWORD=test" >> infrastructure/.env
-          echo "MYSQL_DATABASE=test" >> infrastructure/.env
-          echo "MYSQL_USER=test" >> infrastructure/.env
-          echo "MYSQL_PASSWORD=test" >> infrastructure/.env
-          echo "MYSQL_HOST=test" >> infrastructure/.env
-          echo "MYSQL_PORT=3300" >> infrastructure/.env
-          echo "LOKI_PORT=3100" >> infrastructure/.env
-          echo "BACKEND_HTTP_PORT=8080" >> infrastructure/.env
-          echo "GAME_ADMIN_NAME=test" >> infrastructure/.env
-          echo "GAME_ADMIN_EMAIL=test" >> infrastructure/.env
-          echo "GITHUB_CLIENT_ID=test" >> infrastructure/.env
-          echo "GITHUB_CLIENT_SECRET=test" >> infrastructure/.env
-          echo "GRAFANA_PORT=3000" >> infrastructure/.env
-          echo "JWT_ISSUER=test" >> infrastructure/.env
-          echo "JWT_SECRET=test" >> infrastructure/.env
+          echo "GITHUB_CLIENT_ID=test" >> infrastructure/docker-compose/local/.env
+          echo "GITHUB_CLIENT_SECRET=test" >> infrastructure/docker-compose/local/.env
+          echo "GITHUB_REDIRECT_URI=test" >> infrastructure/docker-compose/local/.env
+          echo "JWT_SECRET=test" >> infrastructure/docker-compose/local/.env
+          echo "POSTGRES_USER=postgres" >> infrastructure/docker-compose/local/.env
+          echo "POSTGRES_PASSWORD=123" >> infrastructure/docker-compose/local/.env
+          echo "POSTGRES_HOST=postgres" >> infrastructure/docker-compose/local/.env
+          echo "POSTGRES_PORT=3000" >> infrastructure/docker-compose/local/.env
+          echo "AUTH_PORT=3001" >> infrastructure/docker-compose/local/.env
+          echo "HUB_PORT=3002" >> infrastructure/docker-compose/local/.env
+          echo "REALM_PORT=3003" >> infrastructure/docker-compose/local/.env
+          echo "LOKI_PORT=3004" >> infrastructure/docker-compose/local/.env
+          echo "GRAFANA_PORT=3005" >> infrastructure/docker-compose/local/.env
+          echo "DOCKER_AUTH=auth:${AUTH_PORT}" >> infrastructure/docker-compose/local/.env
+          echo "DOCKER_HUB=hub:${HUB_PORT}" >> infrastructure/docker-compose/local/.env
+          echo "DOCKER_TOKEN=test" >> infrastructure/docker-compose/local/.env
 
       - name: Build Docker Compose services
         working-directory: infrastructure
-        run: docker compose -f docker-compose.yaml build
+        run: docker-compose --project-directory . --env-file "./infrastructure/docker-compose/local/.env" -f "./infrastructure/docker-compose/local/docker-compose.yaml" build
 
       - name: Validate Docker Compose services
         working-directory: infrastructure
         run: |
-          docker compose -f docker-compose.yaml up -d
+          docker-compose --project-directory . --env-file "./infrastructure/docker-compose/local/.env" -f "./infrastructure/docker-compose/local/docker-compose.yaml" up -d
           sleep 10  # Wait for containers to start
           docker ps -a
-          docker compose -f docker-compose.yaml ps
+          docker-compose --project-directory . --env-file "./infrastructure/docker-compose/local/.env" -f "./infrastructure/docker-compose/local/docker-compose.yaml" ps
           
       - name: Tear down Docker Compose services
         if: always()
         working-directory: infrastructure
-        run: docker compose -f docker-compose.yaml down
+        run: docker-compose --project-directory . --env-file "./infrastructure/docker-compose/local/.env" -f "./infrastructure/docker-compose/local/docker-compose.yaml" down
