--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -41,17 +41,17 @@ jobs:
 
       - name: Build Docker Compose services
         working-directory: infrastructure
-        run: docker-compose --project-directory . --env-file "./infrastructure/docker-compose/local/.env" -f "./infrastructure/docker-compose/local/docker-compose.yaml" build
+        run: docker compose --project-directory . --env-file "./infrastructure/docker-compose/local/.env" -f "./infrastructure/docker-compose/local/docker-compose.yaml" build
 
       - name: Validate Docker Compose services
         working-directory: infrastructure
         run: |
-          docker-compose --project-directory . --env-file "./infrastructure/docker-compose/local/.env" -f "./infrastructure/docker-compose/local/docker-compose.yaml" up -d
+          docker compose --project-directory . --env-file "./infrastructure/docker-compose/local/.env" -f "./infrastructure/docker-compose/local/docker-compose.yaml" up -d
           sleep 10  # Wait for containers to start
           docker ps -a
-          docker-compose --project-directory . --env-file "./infrastructure/docker-compose/local/.env" -f "./infrastructure/docker-compose/local/docker-compose.yaml" ps
+          docker compose --project-directory . --env-file "./infrastructure/docker-compose/local/.env" -f "./infrastructure/docker-compose/local/docker-compose.yaml" ps
           
       - name: Tear down Docker Compose services
         if: always()
         working-directory: infrastructure
-        run: docker-compose --project-directory . --env-file "./infrastructure/docker-compose/local/.env" -f "./infrastructure/docker-compose/local/docker-compose.yaml" down
+        run: docker compose --project-directory . --env-file "./infrastructure/docker-compose/local/.env" -f "./infrastructure/docker-compose/local/docker-compose.yaml" down
