--- a/infrastructure/docker-compose/archive/docker-compose.yaml
+++ b/infrastructure/docker-compose/archive/docker-compose.yaml
@@ -45,6 +45,16 @@ services:
     networks:
       - app-network
 
+  redis:
+    image: redis:latest
+    container_name: redis-db
+    restart: always
+    ports:
+      - "6379:6379"
+    networks:
+      - app-network
+
+
 volumes:
   mysql_data:
   grafana_data:
