--- a/ui/game/Dockerfile
+++ b/ui/game/Dockerfile
@@ -1,5 +1,11 @@
 FROM node:22 AS builder
 WORKDIR /app
+
+ARG VITE_AUTH_URL
+ARG VITE_HUB_URL
+ENV VITE_AUTH_URL=${VITE_AUTH_URL}
+ENV VITE_HUB_URL=${VITE_HUB_URL}
+
 COPY package*.json ./
 RUN npm install
 COPY . .
