added register player in realms backend

--- a/infrastructure/docker-compose/local/docker-compose.yaml
+++ b/infrastructure/docker-compose/local/docker-compose.yaml
@@ -91,6 +91,8 @@ services:
     ports:
       - "4001:${REALM_PORT}"
     environment:
+      - REALM_NAME=Realm1
+      - PUBLIC_ENDPOINT=localhost:4001
       - DOCKER_AUTH=${DOCKER_AUTH}
       - DOCKER_HUB=${DOCKER_HUB}
       - DOCKER_TOKEN=${DOCKER_TOKEN}
@@ -114,6 +116,8 @@ services:
     ports:
       - "4002:${REALM_PORT}"
     environment:
+      - REALM_NAME=Realm2
+      - PUBLIC_ENDPOINT=localhost:4002
       - DOCKER_AUTH=${DOCKER_AUTH}
       - DOCKER_HUB=${DOCKER_HUB}
       - DOCKER_TOKEN=${DOCKER_TOKEN}
