--- a/infrastructure/docker-compose/local/docker-compose.yaml
+++ b/infrastructure/docker-compose/local/docker-compose.yaml
@@ -1,30 +1,13 @@
 services:
-  game-ui:
+  frontend:
     restart: always
     build: 
-      context: ./ui/game
+      context: ./frontend
       args:
         VITE_AUTH_URL: ${VITE_AUTH_URL}
         VITE_HUB_URL: ${VITE_HUB_URL}
     ports:
-      - "${GAME_UI_PORT}:3000"
-    environment:
-      - VITE_AUTH_URL=${VITE_AUTH_URL}
-      - VITE_HUB_URL=${VITE_HUB_URL}
-    depends_on:
-      - hub
-    networks:
-      - app-network
-
-  hub-ui:
-    restart: always
-    build: 
-      context: ./ui/hub
-      args:
-        VITE_AUTH_URL: ${VITE_AUTH_URL}
-        VITE_HUB_URL: ${VITE_HUB_URL}
-    ports:
-      - "${HUB_UI_PORT}:3000"
+      - "${FRONTEND_PORT}:3000"
     environment:
       - VITE_AUTH_URL=${VITE_AUTH_URL}
       - VITE_HUB_URL=${VITE_HUB_URL}
