--- a/infrastructure/docker-compose/local/docker-compose.yaml
+++ b/infrastructure/docker-compose/local/docker-compose.yaml
@@ -86,6 +86,7 @@ services:
       - DB_HOST=${POSTGRES_HOST}
       - DB_PORT=${POSTGRES_PORT}
       - USER_AGENT=game-realm-1
+      - REALM_SETTINGS=default
     depends_on:
       - hub
     networks:
@@ -111,6 +112,7 @@ services:
       - DB_HOST=${POSTGRES_HOST}
       - DB_PORT=${POSTGRES_PORT}
       - USER_AGENT=game-realm-2
+      - REALM_SETTINGS=default
     depends_on:
       - hub
     networks:
