--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 members = [
     "db_migration_lib",
-    "world_server",
+    "realm_server",
     "api_sdk", 
     "fr_cli", 
     "auth_server",
